fixed logo not being visible on mobile devices

--- a/web/app/themes/ppj/src/sass/components/leg-specific-nav.sass
+++ b/web/app/themes/ppj/src/sass/components/leg-specific-nav.sass
@@ -36,12 +36,11 @@
     width: 9.4rem // 2.35 ratio
     pointer-events: auto
 
+    flex: 0 0 15rem
+    height: 6.4rem
+
     .youth-custody &
       @include background-img('svg/ycs_logo.svg')
-
-    @include bp('portrait')
-      flex: 0 0 15rem
-      height: 6.4rem
 
     @include bp('landscape')
       width: 14%
